--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         }
 
         .logo-container img {
-            max-width: 220px;
+            max-width: 140px;
             height: auto;
         }
 
@@ -64,7 +64,7 @@
         }
 
         .login-title {
-            font-size: 22px;
+            font-size: 26px;
             color: #333;
             margin-bottom: 5px;
             font-weight: 600;
@@ -72,9 +72,9 @@
         }
 
         .login-title-sub {
-            font-size: 22px;
+            font-size: 26px;
             color: #333;
-            margin-bottom: 10px;
+            margin-bottom: 15px;
             font-weight: 600;
             text-align: center;
         }
@@ -300,11 +300,14 @@
         .modal-content {
             background: white;
             border-radius: 16px;
-            max-width: 800px;
+            max-width: 1100px;
+            width: 95%;
             max-height: 90vh;
-            overflow-y: auto;
+            overflow: hidden;
             position: relative;
             animation: modalSlideIn 0.3s ease;
+            display: flex;
+            flex-direction: row;
         }
 
         @keyframes modalSlideIn {
@@ -320,15 +323,15 @@
 
         .modal-close {
             position: absolute;
-            top: 20px;
-            right: 20px;
+            top: 15px;
+            right: 15px;
             background: rgba(0,0,0,0.5);
             color: white;
             border: none;
-            width: 40px;
-            height: 40px;
+            width: 36px;
+            height: 36px;
             border-radius: 50%;
-            font-size: 24px;
+            font-size: 22px;
             cursor: pointer;
             z-index: 10;
             transition: background 0.2s;
@@ -339,28 +342,35 @@
         }
 
         .modal-photo {
-            width: 100%;
-            max-height: 60vh;
+            width: 55%;
+            max-height: 85vh;
             object-fit: contain;
-            background: #f5f5f5;
+            background: #f0f0f0;
+            flex-shrink: 0;
         }
 
         .modal-info {
-            padding: 30px;
+            width: 45%;
+            padding: 35px;
+            overflow-y: auto;
+            max-height: 85vh;
+            display: flex;
+            flex-direction: column;
         }
 
         .modal-number {
             color: var(--purple);
-            font-size: 24px;
+            font-size: 22px;
             font-weight: 700;
-            margin-bottom: 15px;
+            margin-bottom: 20px;
         }
 
         .modal-description {
             color: var(--dark-gray);
-            font-size: 16px;
-            line-height: 1.8;
+            font-size: 15px;
+            line-height: 1.9;
             white-space: pre-wrap;
+            flex-grow: 1;
         }
 
         .modal-vote-btn {
@@ -374,6 +384,7 @@
             font-weight: 600;
             cursor: pointer;
             transition: all 0.3s;
+            align-self: flex-start;
         }
 
         .modal-vote-btn:hover:not(:disabled) {
@@ -420,6 +431,25 @@
         }
 
         /* Responsive */
+        @media (max-width: 900px) {
+            .modal-content {
+                flex-direction: column;
+                max-height: 90vh;
+                overflow-y: auto;
+            }
+            
+            .modal-photo {
+                width: 100%;
+                max-height: 50vh;
+            }
+            
+            .modal-info {
+                width: 100%;
+                max-height: none;
+                padding: 25px;
+            }
+        }
+
         @media (max-width: 768px) {
             .gallery {
                 grid-template-columns: 1fr;
